# PSCR-TME

./: .autotools  .cproject  .project  CMakeLists.txt  Makefile  cmake_install.cmake
TME1/: .autotools  .cproject  .project
TME1/exo1/src/: List.cpp  List.h  main.cpp
TME2/: .cproject  .project  HashMap.h  main.cpp
TME2/Debug/: TME2.personal  makefile  sources.mk
TME3/: .cproject  .project  HashMap.h  inverse.h  main.cpp  tme3.h
TME3/Debug/: TME3  makefile
TME4/src/: Banque.cpp  Banque.h  Compte.cpp  Compte.h  main.cpp
TME5/: .cproject  .gitignore  .project  tme4.sln  tme4.vcxproj  tme4.vcxproj.filters
TME5/src/: .gitignore  Barrier.h  Job.h  Makefile.am  Pool.h  Queue.h  main.cpp  tme5
TME6/: .cproject  .project
TME6/src/: fork_exo.cpp  rsleep.cpp
TME7/: .cproject  .project
TME7/src/: Stack.h  chat_client.cpp  chat_common.h  chat_server.cpp  pipe  pipe.cpp  prod_cons.cpp
TME8/: .autotools  .cproject  .project  README.md
TME8/src/: Ftp_client.cpp  Ftp_server.cpp  Makefile.am  ServerSocket.cpp  Socket.cpp  Socket.h  TCPServer.cpp  TCPServer.h  server2.cpp
TME9/: .cproject  .gitignore  .project  README.md
nov2019/exam/exo2/: .cproject  .project
nov2019/exam/exo2/src/: Makefile  main.cpp  main2.cpp
nov2019/exam/exo3/: .project
